--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 body {
   text-align: center;
-  background-color: rgb(245, 247, 225)
+  background-color: rgb(249, 250, 236)
 }
 
 .nav-bar {
@@ -40,7 +40,9 @@ body {
 }
 
 p {
-  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
+  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  padding: 5px;
+  margin: 10px;
 }
 
 .all-pull-workouts {
