--- a/src/App.css
+++ b/src/App.css
@@ -45,6 +45,10 @@ p {
   margin: 10px;
 }
 
+*{
+  scroll-behavior: smooth;
+}
+
 .all-pull-workouts {
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
