--- a/src/App.css
+++ b/src/App.css
@@ -7,11 +7,12 @@ body {
   display: flex;
   justify-content:flex-end;
   padding: 5px;
+  background-color: rgb(219, 250, 133);;
 }
 
 .nav-home {
   display: flex;
-  justify-content: flex-start;
+  justify-content: flex-end;
   padding: 5px
 }
 
