--- a/src/App.css
+++ b/src/App.css
@@ -43,6 +43,14 @@ body {
   transform: translateY(4px);
 }
 
+.all-p {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 60%;
+  
+}
+
 p {
   font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   padding: 5px;
@@ -102,6 +110,6 @@ h1 {
   display: flex;
   justify-content: center;
   padding: 10px;
-  margin: 10px;
+  margin-top: 10px;
   background-color: rgb(167, 250, 229);
 }
