--- a/src/App.css
+++ b/src/App.css
@@ -92,8 +92,9 @@ h1 {
   padding: 5px;
   margin: 5px;
   border-radius: 10px;
-  height: 40px;
-  width: 100px;
+  height: 50px;
+  width: 140px;
+  font-size: 20px;
 }
 
 .button:hover {
